Alteração de cores de texto e seções

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </h1>
                 <br>
                 <p>
-Clique no botão “Inscrever Iniciativa” e preencha o formulário com as informações da iniciativa.
+Clique no botão <b>“Inscrever Iniciativa”</b> e preencha o formulário com as informações da iniciativa.
 <br>
 <br>
 
