Alterado coloração da seção Sobre o instituto

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
         </div>
         <div class="cards-container">
             <div class="cards-content">
-                <div class="card">
+                <div class="card card-1">
                     <h1>Fundos</h1>
                     <p>Apoiamos o Desenvolvimento Institucional das OSCs
                         </p>
                 </div>
-                <div class="card">
+                <div class="card card-2">
                     <h1>Comunidade e aprendizagem</h1>
                     <p>Criamos espaços de
                         aprendizagem com as OSCs apoiadas
                         </p>
                 </div>
-                <div class="card">
+                <div class="card card-3">
                     <h1>Plataforma Conjunta</h1>
                     <p>Promovemos a produção e
                         democratização do acesso a conhecimento e formações sobre Desenvolvimento
                         Institucional de OSCs
                         </p>
                 </div>
-                <div class="card">
+                <div class="card card-4">
                     <h1>Advocacy</h1>
                     <p>Mobilizamos investidores
                         sociais para um novo olhar
