--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <br><br><p><b>Não apoiamos:</b></p>
                     <br>
                     <p>
-                       - O desenvolvimento institucional da organização proponente! Para isso, conheça nossa iniciativa de Fundos! LINK PARA FUNDOS
+                       - O desenvolvimento institucional da organização proponente! Para isso, conheça nossa <b>iniciativa de Fundos!</b> 
                        <br>
-                        - Cotas acima de R$100 mil.
+                        - Cotas acima de R$ 100 mil.
                     </p>
 
             </div>
