Nova imagem de header atualizada

--- a/index.html
+++ b/index.html
@@ -111,15 +111,16 @@
                        <br>
                         - Cotas acima de R$ 100 mil.
                     </p>
+                    <div class="button-container">
+                        <div class="button-content">
+                            <button>CONHEÇA O REGULAMENTO DA CHAMADA ABERTA
+                            </button>
+                        </div>
+                    </div>
+            </div>
 
-            </div>
         </div>
-        <div class="button-container">
-            <div class="button-content">
-                <button><p>CONHEÇA O REGULAMENTO DA CHAMADA ABERTA
-                </p></button>
-            </div>
-        </div>
+
         <div class="how-to-container">
             <div class="how-to-content">
                 <h1>Como faço para inscrever uma iniciativa?
