--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
             </div>
 
         </div>
-
         <div class="how-to-container">
             <div class="how-to-content">
                 <h1>Como faço para inscrever uma iniciativa?
@@ -142,11 +141,35 @@ O formulário ficará aberto ao longo de todo o ano de modo a nos ajudar a conhe
 Em caso de eventuais dúvidas, escreva para: contato@institutoacp.org.br.
                 </p>
             </div>
+            <div class="button-container">
+                <div class="button-content">
+                    <button><p>INSCREVER INICIATIVA
+                    </p></button>
+                </div>
+            </div>
         </div>
-        <div class="button-container">
-            <div class="button-content">
-                <button><p>INSCREVER INICIATIVA
-                </p></button>
+        <div class="about-simbi-container">
+            <div class="about-simbi-content-left">
+                <h1>SOBRE A SIMBI</h1>
+                <p>
+                    Fundada em 2017, a Simbi é a social tech especialista em gestão do investimento social por meio de verba direta ou incentivada. Ao unir tecnologia com cuidado humano, desenvolvemos um ecossistema de soluções de investimento social para conectar empresas investidoras e iniciativas sociais no intuito de escalar o impacto positivo na sociedade.
+                </p>
+            </div>
+            <div class="about-simbi-content-right">
+                <img src="/source/images/about-simbi.png" alt="logo" class="about-simbi-logo">
+            </div>
+        </div>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-image">
+                    <img src="/source/images/simbi-logo.svg" alt="logo" class="footer-logo"> 
+                </div>
+
+                <p>
+                    Simbiose Assessoria em projetos culturais e desportivos - CNPJ: 26.984.592/0001-17 - Endereço: Avenida Angélica, 2529 - São Paulo - SP - CEP: 01227-200
+                    <br></br>
+                    Copyright 2024 Simbi. Todos os direitos reservados
+                </p>
             </div>
         </div>
 </body>
