--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         - Cotas acima de R$ 100 mil.
                     </p>
                         <div class="button-content">
-                            <button>CONHEÇA O REGULAMENTO DA CHAMADA ABERTA
+                            <button>REGULAMENTO DA CHAMADA ABERTA
                             </button>
                         </div>
             </div>
