--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap"
         rel="stylesheet">
-    <script src="/source/assets/script.js"></script>
+        <script defer src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+        <script defer src="/source/assets/script.js"></script>
 </head>
-
 <body>
     <div class="background-page">
         <div class="nav-bar-container">
