Adicionado links e editado campos solicitados

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>ICP</title>
+    <title>Chamada aberta - Instituto ACP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="./source/images/favicon/favicon.ico"/>
     <link rel="stylesheet" type="text/css" media="screen" href="/styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +25,7 @@
                 </div>
                 <div class="nav-bar-menu">
                     <ul class="nav-bar-menu-list">
-                        <li class="nav-bar-menu-button"><button><p>Inscrever Projeto</p></button>
+                        <li class="nav-bar-menu-button"><button id="inscreverProjeto"><p>INSCREVER INICIATIVA</p></button>
                         </li>
                     </ul>
                 </div>
@@ -107,7 +108,7 @@
                     <br><br><p><b>Não apoiamos:</b></p>
                     <br>
                     <p>
-                       - O desenvolvimento institucional da organização proponente! Para isso, conheça nossa <b>iniciativa de Fundos!</b> 
+                       - O desenvolvimento institucional da organização proponente! Para isso, conheça nossa <b><a href="https://docs.google.com/forms/d/e/1FAIpQLScbNg9gNzYManMOKsClxepb1GoJDn_vUsk5qEB8ryY1ZzQJ4g/viewform" class="iniciativaDeFundos">iniciativa de Fundos!</a></b> 
                        <br>
                         - Cotas acima de R$ 100 mil.
                     </p>
@@ -141,7 +142,7 @@ Em caso de eventuais dúvidas, escreva para: contato@institutoacp.org.br.
             </div>
             <div class="button-container">
                 <div class="button-content">
-                    <button><p>INSCREVER INICIATIVA
+                    <button id="inscreverIniciativa"><p>INSCREVER INICIATIVA
                     </p></button>
                 </div>
             </div>
