--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         </div>
         <div class="button-container">
             <div class="button-content">
-                <button><p>CONHEÇA NOSSA TEORIA DA MUDANÇA
-                </p></button>
+                <button id="teoria"> <p>CONHEÇA NOSSA TEORIA DA MUDANÇA </p></button>
             </div>
         </div>
         <div class="open-call-container">
