Update - Atualizações simbi 16/06

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h1>SOBRE O INSTITUTO ACP</h1>
-                    <p>O Instituto ACP tem como propósito potencializar o desenvolvimento institucional das Organizações da Sociedade Civil (OSCs) brasileiras. Atuamos por meio de 4 estratégias:</p>
+                    <p>Temos como propósito potencializar o desenvolvimento institucional das Organizações da Sociedade Civil (OSCs) brasileiras. Atuamos por meio de 4 estratégias:</p>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
         </div>
         <div class="open-call-container">
             <div class="open-call-content-left">
-                <h1>SOBRE A CHAMADA ABERTA DO IACP</h1>
+                <h1>SOBRE A CHAMADA ABERTA</h1>
                 <br>
                 <p>A Chamada Aberta do Instituto ACP é parte da nossa estratégia de advocacy e tem como objetivo apoiar iniciativas que contribuem para o fortalecimento e desenvolvimento institucional de organizações da sociedade civil. Ao longo do ano, mantemos um formulário aberto para conhecer estas iniciativas e selecionar algumas para financiar!</p>
             </div>
@@ -98,16 +98,23 @@
                 <p>Para receber um apoio, a iniciativa precisa necessariamente:
                 <br>
                 <br>
+                <b>
                     1. Contribuir para o fortalecimento e desenvolvimento institucional de OSCs.
+                </b>
                     <br>
-                    2. Ser co-financiada. 
+                    <b>
+                        2. Ser co-financiada. 
+                    </b>
                     <br>
-                    3. Ser uma campanha, evento, curso, negócio de impacto social, pesquisa ou plataforma. Outros formatos precisam ser explicados e serão avaliados segundo a adesão ao nosso foco.
+                    <b>
+                        3. Ser uma campanha, evento, curso, negócio de impacto social, pesquisa ou plataforma. Outros formatos precisam ser explicados e serão avaliados segundo a adesão ao nosso foco.
+                    </b>
                     </p>
                     <br><br><p><b>Não apoiamos:</b></p>
                     <br>
                     <p>
-                       - O desenvolvimento institucional da organização proponente! Para isso, conheça nossa <b>iniciativa de Fundos!</b> 
+                       - O desenvolvimento institucional da organização proponente! Para isso, conheça nossa <a href="https://www.institutoacp.org.br/c%C3%B3pia-o-que-fazemos" style="text-decoration: none; color: inherit;"><b>iniciativa de Fundos!</b></a>
+                        
                        <br>
                         - Cotas acima de R$ 100 mil.
                     </p>
