update - botao de download

--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
                     1. Contribuir para o fortalecimento e desenvolvimento institucional de OSCs.
                 </b>
                     <br>
+                    <br>
+
                     <b>
                         2. Ser co-financiada. 
                     </b>
+                    <br>
                     <br>
                     <b>
                         3. Ser uma campanha, evento, curso, negócio de impacto social, pesquisa ou plataforma. Outros formatos precisam ser explicados e serão avaliados segundo a adesão ao nosso foco.
@@ -119,8 +122,10 @@
                         - Cotas acima de R$ 100 mil.
                     </p>
                         <div class="button-content">
-                            <button>REGULAMENTO DA CHAMADA ABERTA
-                            </button>
+                            <a href="./source//assets/documents/regulamento_chamada aberta_2025.pdf" style="text-decoration: none;" download>
+                                <button>REGULAMENTO DA CHAMADA ABERTA
+                                </button>
+                            </a>
                         </div>
             </div>
 
