Update - Alteração de link e tipografia em negrito

--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
                     <br><br><p><b>Não apoiamos:</b></p>
                     <br>
                     <p>
-                       - O desenvolvimento institucional da organização proponente! Para isso, conheça nossa <b><a href="https://docs.google.com/forms/d/e/1FAIpQLScbNg9gNzYManMOKsClxepb1GoJDn_vUsk5qEB8ryY1ZzQJ4g/viewform" class="iniciativaDeFundos">iniciativa de Fundos!</a></b> 
+                     <b>  - O desenvolvimento institucional da organização proponente! Para isso, conheça nossa <b><a href="https://www.institutoacp.org.br/c%C3%B3pia-o-que-fazemos">iniciativa de Fundos!</a></b> 
                        <br>
                         - Cotas acima de R$ 100 mil.
                     </p>
+                </b>
                         <div class="button-content">
                             <a href="./source//assets/documents/regulamento_chamada aberta_2025.pdf" style="text-decoration: none;" download>
                                 <button>REGULAMENTO DA CHAMADA ABERTA
