--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </p>
                 </b>
                         <div class="button-content">
-                            <a href="./source//assets/documents/regulamento_chamada aberta_2025.pdf" style="text-decoration: none;" download>
+                            <a href="./source//assets/documents/regulamento_chamada aberta_2025.pdf" style="text-decoration: none;" target="_blank">
                                 <button>REGULAMENTO DA CHAMADA ABERTA
                                 </button>
                             </a>
